# qr-generator

./: .env  .gitignore  Cargo.toml  README.md  install.sh
migrations/2024-04-08-161851_qrcode/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  qrcodes.rs  schema.rs  web_page.rs
