[package]
name = "diesel_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[workspace]
#members = [
#    "src",
#]

[dependencies]
diesel = "2.1.5"
diesel_cli = "2.1.1"
dotenv = "0.15.0"
dialoguer = "0.11.0"
fast_qr = { version = "0.12.1", features = ["svg", "image"] }

